; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_turnstile_multihop.c_run_client_server.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_turnstile_multihop.c_run_client_server.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [44 x i8] c"com.apple.xnu.test.turnstile_multihop.plist\00", align 1
@LAUNCH_SYSTEM_DOMAIN = common dso_local global i32 0, align 4
@HELPER_TIMEOUT_SECS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @run_client_server to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @run_client_server(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca [2 x i32], align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = getelementptr inbounds [2 x i32], [2 x i32]* %5, i64 0, i64 0
  %7 = load i8*, i8** %3, align 8
  %8 = load i32, i32* @LAUNCH_SYSTEM_DOMAIN, align 4
  %9 = call i32 @dt_launchd_helper_domain(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i8* %7, i32* null, i32 %8)
  store i32 %9, i32* %6, align 4
  %10 = getelementptr inbounds i32, i32* %6, i64 1
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @dt_fork_helper(i8* %11)
  store i32 %12, i32* %10, align 4
  %13 = getelementptr inbounds [2 x i32], [2 x i32]* %5, i64 0, i64 0
  %14 = load i32, i32* @HELPER_TIMEOUT_SECS, align 4
  %15 = call i32 @dt_run_helpers(i32* %13, i32 2, i32 %14)
  ret void
}

declare dso_local i32 @dt_launchd_helper_domain(i8*, i8*, i32*, i32) #1

declare dso_local i32 @dt_fork_helper(i8*) #1

declare dso_local i32 @dt_run_helpers(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
